--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>YUN BO RAN UI/UX Designer</title>
+<title>YUN BORAN UI/UX Designer</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="row">
           <div class="intro-text">
-            <h1>YUN BO RAN</h1>
+            <h1>YUN BORAN</h1>
             <p>UI/UX Designer</p>
             <a href="#about" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
         </div>
@@ -91,7 +91,8 @@
 			<li>Mail : november26s2@gmail.com</li>
 			<li>2010. 02 경복대학 피부미용과 졸업</li>
       <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점</li>
-
+      <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점</li>
+      <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점</li>
 		</ul>
          
           <a href="#portfolio" class="btn btn-primary btn-lg page-scroll">My Portfolio</a> </div>
