--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점</li>
       <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점</li>
       <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점</li>
+      <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점</li>
 		</ul>
          
           <a href="#portfolio" class="btn btn-primary btn-lg page-scroll">My Portfolio</a> </div>
