--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<li>Name : 윤보란</li>
 			<li>Birth : 1990.11.26</li>
 			<li>Mail : november26s2@gmail.com</li>
-			<li>2010. 02 경복대학 피부미용과 졸업</li>
+			<li><font color="#blue">2010. 02</font>경복대학 피부미용과 졸업</li>
       <li>2012. 12 하이미디어 컴퓨터 디자인 학원 신촌점 illustrator&photoshop</li>
       <li>2012. 12 더조은 컴퓨터 아트학원 신촌점 Flash</li>
       <li>2012. 12 그린 컴퓨터 아트학원 신촌점 HTML5/CSS</li>
