--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	  <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="LOTTE E&C Smart 안전관리" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>LOTTE E&C <br>Smart 안전관리</h4>
                 <small>App Design</small> </div>
@@ -160,7 +160,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="연세대학교 원주캠퍼스" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>연세대학교 <br>원주캠퍼스</h4>
                 <small>App Design</small> </div>
