--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
             <li><a href="#" data-filter=".web">Web</a></li>
-			<li><a href="#" data-filter=".mobile">Mobile</a></li>
-			<li><a href="#" data-filter=".webmobile">Web/Mobile</a></li>
+            <li><a href="#" data-filter=".mobile">Mobile</a></li>
+            <li><a href="#" data-filter=".webmobile">Web/Mobile</a></li>
             <li><a href="#" data-filter=".app">App</a></li>
             <!--li><a href="#" data-filter=".branding">Branding</a></li-->
           </ol>
@@ -147,24 +147,14 @@
       <div class="clearfix"></div>
     </div>
     <div class="row">
-	  <div class="portfolio-items">
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="LOTTE E&C Smart 안전관리" rel="prettyPhoto">
-              <div class="hover-text">
-                <h4>LOTTE E&C <br>Smart 안전관리</h4>
-                <small>App Design</small> </div>
-              <img src="img/portfolio/02-small.png" class="img-responsive" alt="LOTTE E&C Smart 안전관리"> </a> </div>
-          </div>
-        </div>
       <div class="portfolio-items">
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="연세대학교 원주캠퍼스" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>연세대학교 <br>원주캠퍼스</h4>
-                <small>App Design</small> </div>
-              <img src="img/portfolio/01-small.png" class="img-responsive" alt="연세대학교 원주캠퍼스"> </a> </div>
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
@@ -221,7 +211,15 @@
               <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-      
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
