--- a/index.html
+++ b/index.html
@@ -184,6 +184,15 @@
               <img src="img/portfolio/15-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/14-large.png" title="Project description" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>Project Title</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/14-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/05-large.png" title="Project description" rel="prettyPhoto">
@@ -197,7 +206,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/04-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>우정사업본부</h4>
                 <small>App Development</small> </div>
               <img src="img/portfolio/04-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
