--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/18-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/18-large.png" title="부산일보" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>부산일보</h4>
                 <small>Web Design</small> </div>
               <img src="img/portfolio/18-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -161,7 +161,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/17-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>연합뉴스</h4>
                 <small>App Development</small> </div>
               <img src="img/portfolio/17-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -170,8 +170,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/16-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
+                <h4>동명대신문</h4>
+                <small>Mobile</small> </div>
               <img src="img/portfolio/16-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
