--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/14-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/">
               <div class="hover-text">
-                <h4>국민안전처 재난사고 관리 <br>운영지원 시스템</h4>
+                <h4>한국언론진흥재단</h4>
                 <small>Web Design</small> </div>
               <img src="img/portfolio/14-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -197,7 +197,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/05-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>국민안전처 재난사고 관리 <br>운영지원 시스템</h4>
                 <small>App Development</small> </div>
               <img src="img/portfolio/05-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
