--- a/index.html
+++ b/index.html
@@ -193,6 +193,15 @@
               <img src="img/portfolio/14-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/company.html">
+              <div class="hover-text">
+                <h4>AMI 시스템즈<br>자사 홈페이지</h4>
+                <small>Web Design</small> </div>
+              <img src="img/portfolio/13-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/05-large.png" title="Project description" rel="prettyPhoto">
@@ -224,7 +233,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>롯데E&C <br>스마트 안전관리</h4>
                 <small>App Development, Branding</small> </div>
               <img src="img/portfolio/02-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -233,7 +242,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>연세대학교 <br>원주캠퍼스</h4>
                 <small>Web Design</small> </div>
               <img src="img/portfolio/01-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
