--- a/index.html
+++ b/index.html
@@ -150,38 +150,38 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/18-large.png" title="부산일보" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/11-large.png" title="부산일보" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>부산일보</h4>
                 <small>Web Design</small> </div>
-              <img src="img/portfolio/18-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/11-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/17-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/10-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>연합뉴스</h4>
                 <small>App Development</small> </div>
-              <img src="img/portfolio/17-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/10-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/16-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/09-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>동명대신문</h4>
                 <small>Mobile</small> </div>
-              <img src="img/portfolio/16-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/09-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/15-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/08-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>Project Title</h4>
                 <small>Web Design</small> </div>
-              <img src="img/portfolio/15-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/08-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -190,16 +190,16 @@
               <div class="hover-text">
                 <h4>한국언론진흥재단</h4>
                 <small>Web Design</small> </div>
-              <img src="img/portfolio/14-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/07-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/company.html">
               <div class="hover-text">
-                <h4>AMI 시스템즈<br>자사 홈페이지</h4>
+                <h4>AMI SYSTEMS<br>자사 홈페이지</h4>
                 <small>Web Design</small> </div>
-              <img src="img/portfolio/13-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/06-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
