--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/11-large.png" title="부산일보" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="https://www.busan.com/">
               <div class="hover-text">
                 <h4>부산일보</h4>
                 <small>Web Design</small> </div>
@@ -168,7 +168,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/09-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="https://newsweb.tu.ac.kr/">
               <div class="hover-text">
                 <h4>동명대신문</h4>
                 <small>Mobile</small> </div>
