--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/08-large.png" title="프라임경제 네이버 뉴스 스탠드" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>프라임경제<br>네이버 뉴스 스탠드</h4>
                 <small>Web Design</small> </div>
               <img src="img/portfolio/08-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
@@ -202,16 +202,16 @@
               <img src="img/portfolio/06-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/05-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>국민안전처 재난사고 관리 <br>운영지원 시스템</h4>
+                <h4>국민안전처 재난사고 관리<br>운영지원 시스템</h4>
                 <small>App Development</small> </div>
               <img src="img/portfolio/05-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 app">
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/04-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
@@ -220,7 +220,7 @@
               <img src="img/portfolio/04-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding">
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/03-large.png" title="농협공판장" rel="prettyPhoto">
               <div class="hover-text">
@@ -229,12 +229,12 @@
               <img src="img/portfolio/03-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 branding app">
+        <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>롯데E&C <br>스마트 안전관리</h4>
-                <small>App Development, Branding</small> </div>
+                <h4>롯데E&C<br>스마트 안전관리</h4>
+                <small>App</small> </div>
               <img src="img/portfolio/02-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
@@ -242,7 +242,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>연세대학교 <br>원주캠퍼스</h4>
+                <h4>연세대학교<br>원주캠퍼스</h4>
                 <small>Web Design</small> </div>
               <img src="img/portfolio/01-small.png" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
