--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
             <div class="hover-bg"> <a href="https://www.busan.com/">
               <div class="hover-text">
                 <h4>부산일보</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/11-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/11-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
@@ -162,8 +164,10 @@
             <div class="hover-bg"> <a href="img/portfolio/10-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>연합뉴스</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/10-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>App Development</small>
+              </div>
+              <img src="img/portfolio/10-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -171,8 +175,10 @@
             <div class="hover-bg"> <a href="https://newsweb.tu.ac.kr/">
               <div class="hover-text">
                 <h4>동명대신문</h4>
-                <small>Mobile</small> </div>
-              <img src="img/portfolio/09-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>Mobile</small>
+              </div>
+              <img src="img/portfolio/09-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -180,8 +186,10 @@
             <div class="hover-bg"> <a href="img/portfolio/08-large.png" title="프라임경제 네이버 뉴스 스탠드" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>프라임경제<br>네이버 뉴스 스탠드</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/08-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/08-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -189,8 +197,10 @@
             <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/">
               <div class="hover-text">
                 <h4>한국언론진흥재단</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/07-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/07-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -198,8 +208,10 @@
             <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/company.html">
               <div class="hover-text">
                 <h4>AMI SYSTEMS<br>자사 홈페이지</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/06-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/06-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -207,8 +219,10 @@
             <div class="hover-bg"> <a href="img/portfolio/05-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>국민안전처 재난사고 관리<br>운영지원 시스템</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/05-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>App Development</small>
+              </div>
+              <img src="img/portfolio/05-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -216,8 +230,10 @@
             <div class="hover-bg"> <a href="img/portfolio/04-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>우정사업본부</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/04-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>App Development</small>
+              </div>
+              <img src="img/portfolio/04-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -225,8 +241,10 @@
             <div class="hover-bg"> <a href="img/portfolio/03-large.png" title="농협공판장" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>농협공판장</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/03-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/03-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
@@ -234,8 +252,10 @@
             <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>롯데E&C<br>스마트 안전관리</h4>
-                <small>App</small> </div>
-              <img src="img/portfolio/02-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>App</small>
+              </div>
+              <img src="img/portfolio/02-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -243,8 +263,10 @@
             <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>연세대학교<br>원주캠퍼스</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/01-small.png" class="img-responsive" alt="Project Title"> </a> </div>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/01-small.png" class="img-responsive" alt="Project Title"> </a>
+            </div>
           </div>
         </div>
       </div>
