--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="https://www.koreapost.go.kr/">
               <div class="hover-text">
                 <h4>우정사업본부</h4>
                 <small>App Development</small>
