--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="hover-bg"> <a href="img/portfolio/10-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>연합뉴스</h4>
-                <small>App Development</small>
+                <small>App</small>
               </div>
               <img src="img/portfolio/10-small.png" class="img-responsive" alt="Project Title"> </a>
             </div>
