--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
+        <div class="col-sm-6 col-md-3 col-lg-3 mobile">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://newsweb.tu.ac.kr/">
               <div class="hover-text">
