--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 web">
+        <div class="col-sm-6 col-md-3 col-lg-3 mobile">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
