--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="롯데E&C 스마트 안전관리" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>롯데E&C<br>스마트 안전관리</h4>
                 <small>App</small>
@@ -260,7 +260,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 mobile">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/01-large.png" title="연세대학교 원주캠퍼스" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>연세대학교<br>원주캠퍼스</h4>
                 <small>Web Design</small>
