--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/10-large.png" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/10-large.png" title="연합뉴스" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>연합뉴스</h4>
                 <small>App</small>
@@ -174,10 +174,10 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="https://newsweb.tu.ac.kr/">
               <div class="hover-text">
-                <h4>동명대신문</h4>
+                <h4>동명대 신문</h4>
                 <small>Mobile</small>
               </div>
-              <img src="img/portfolio/09-small.png" class="img-responsive" alt="Project Title"> </a>
+              <img src="img/portfolio/09-small.png" class="img-responsive" alt="동명대 신문"> </a>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
                 <h4>프라임경제<br>네이버 뉴스 스탠드</h4>
                 <small>Web Design</small>
               </div>
-              <img src="img/portfolio/08-small.png" class="img-responsive" alt="Project Title"> </a>
+              <img src="img/portfolio/08-small.png" class="img-responsive" alt="프라임경제 네이버 뉴스 스탠드"> </a>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
                 <h4>한국언론진흥재단</h4>
                 <small>Web Design</small>
               </div>
-              <img src="img/portfolio/07-small.png" class="img-responsive" alt="Project Title"> </a>
+              <img src="img/portfolio/07-small.png" class="img-responsive" alt="한국언론진흥재단"> </a>
             </div>
           </div>
         </div>
@@ -210,7 +210,7 @@
                 <h4>AMI SYSTEMS<br>자사 홈페이지</h4>
                 <small>Web Design</small>
               </div>
-              <img src="img/portfolio/06-small.png" class="img-responsive" alt="Project Title"> </a>
+              <img src="img/portfolio/06-small.png" class="img-responsive" alt="AMI SYSTEMS 자사 홈페이지"> </a>
             </div>
           </div>
         </div>
@@ -221,7 +221,7 @@
                 <h4>국민안전처 재난사고 관리<br>운영지원 시스템</h4>
                 <small>App Development</small>
               </div>
-              <img src="img/portfolio/05-small.png" class="img-responsive" alt="Project Title"> </a>
+              <img src="img/portfolio/05-small.png" class="img-responsive" alt="국민안전처 재난사고 관리 운영지원 시스템"> </a>
             </div>
           </div>
         </div>
