--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <h4>우정사업본부</h4>
                 <small>App Development</small>
               </div>
-              <img src="img/portfolio/04-small.png" class="img-responsive" alt="Project Title"> </a>
+              <img src="img/portfolio/04-small.png" class="img-responsive" alt="우정사업본부"> </a>
             </div>
           </div>
         </div>
