--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://newgp.nonghyup.com/naieJsp/index_ui.jsp">
+            <div class="hover-bg"> <a href="https://newgp.nonghyup.com/naieJsp/index_ui.jsp" target="_blank">
               <div class="hover-text">
                 <h4>농협공판장</h4>
                 <small>Web Design</small>
