--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://www.busan.com/">
+            <div class="hover-bg"> <a href="https://www.busan.com/" target="_blank">
               <div class="hover-text">
                 <h4>부산일보</h4>
                 <small>Web Design</small>
@@ -194,7 +194,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/">
+            <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/" target="_blank">
               <div class="hover-text">
                 <h4>한국언론진흥재단</h4>
                 <small>Web Design</small>
@@ -205,7 +205,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/company.html">
+            <div class="hover-bg"> <a href="http://www.amisystems.co.kr/amisystems.co.kr/company.html" target="_blank">
               <div class="hover-text">
                 <h4>AMI SYSTEMS<br>자사 홈페이지</h4>
                 <small>Web Design</small>
