--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@2.0/nanumsquare.css" />
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
+
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -155,7 +158,7 @@
                 <h4>부산일보</h4>
                 <small>Web Design</small>
               </div>
-              <img src="img/portfolio/11-small.png" class="img-responsive" alt="Project Title"> </a>
+              <img src="img/portfolio/11-small.png" class="img-responsive" alt="부산일보"> </a>
             </div>
           </div>
         </div>
