--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
   </div>
 </div-->>
 <!-- Contact Section -->
-<div id="contact" class="text-center">
+<!--div id="contact" class="text-center">
   <div class="overlay">
     <div class="container">
       <div class="section-title center">
@@ -389,11 +389,11 @@
       </div>
     </div>
   </div>
-</div>
+</div-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
-      <p>Copyright &copy; 2016 Marcus Hansen. Designed by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      <p>Copyright &copy; 2023 Marcus Hansen. Designed by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
