--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="#" target="_blank">
+            <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="UI FRAME WORK" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>AMI SYSTEMS UI FRAME WORK</h4>
+                <h4>UI FRAME WORK</h4>
                 <small>Web Design</small>
               </div>
               <img src="img/portfolio/12-small.png" class="img-responsive" alt="UI FRAME WORK"> </a>
