--- a/index.html
+++ b/index.html
@@ -163,7 +163,29 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.png" title="UI FRAME WORK" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/12-large.png" title="UI FRAME WORK" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>UI FRAME WORK</h4>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/12-small.png" class="img-responsive" alt="UI FRAME WORK"> </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/13-large.png" title="UI FRAME WORK" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>UI FRAME WORK</h4>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/13-small.png" class="img-responsive" alt="UI FRAME WORK"> </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/12-large.png" title="UI FRAME WORK" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>UI FRAME WORK</h4>
                 <small>Web Design</small>
