--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/14-large.png" title="WCMS 통합 관리 시스템 서비스" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>WCMS 통합 관리 시스템 서비스</h4>
+                <h4>WCMS <br>통합 관리 시스템 서비스</h4>
                 <small>Web Design</small>
               </div>
               <img src="img/portfolio/14-small.png" class="img-responsive" alt="WCMS 통합 관리 시스템 서비스"> </a>
