--- a/index.html
+++ b/index.html
@@ -163,6 +163,17 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
+            <div class="hover-bg"> <a href="img/portfolio/15-large.png" title="지역신문 발전 위원회" rel="prettyPhoto">
+              <div class="hover-text">
+                <h4>지역신문 발전 위원회</h4>
+                <small>Web Design</small>
+              </div>
+              <img src="img/portfolio/15-small.png" class="img-responsive" alt="지역신문 발전 위원회"> </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/14-large.png" title="지역신문 발전 위원회" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>지역신문 발전 위원회</h4>
