--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/14-large.png" title="지역신문 발전 위원회" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/14-large.png" title="WCMS 웹 콘텐츠 관리시스템 서비스" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>지역신문 발전 위원회</h4>
+                <h4>WCMS 웹 콘텐츠<br>관리시스템 서비스</h4>
                 <small>Web Design</small>
               </div>
-              <img src="img/portfolio/14-small.png" class="img-responsive" alt="지역신문 발전 위원회"> </a>
+              <img src="img/portfolio/14-small.png" class="img-responsive" alt="WCMS 웹 콘텐츠 관리시스템 서비스"> </a>
             </div>
           </div>
         </div>
