--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/13-large.png" title="UI FRAME WORK" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/13-large.png" title="한국언론진흥재단" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>UI FRAME WORK</h4>
+                <h4>한국언론진흥재단<br>표그래프 신규 작성</h4>
                 <small>Web Design</small>
               </div>
-              <img src="img/portfolio/13-small.png" class="img-responsive" alt="UI FRAME WORK"> </a>
+              <img src="img/portfolio/13-small.png" class="img-responsive" alt="한국언론진흥재단"> </a>
             </div>
           </div>
         </div>
