--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="http://microsite.ddaily.co.kr/kyndryl/" target="_blank">
               <div class="hover-text">
-                <h4>디지털데일리 마이크로 사이트 킨드릴</h4>
+                <h4>디지털데일리<br>마이크로 사이트 킨드릴</h4>
                 <small>Web Design</small>
               </div>
               <img src="img/portfolio/18-small.png" class="img-responsive" alt="디지털데일리 마이크로 사이트 킨드릴"> </a>
